--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Vi</title>
+  <title>xu0w0xu</title>
   <meta name="Description" content="Home Page of iissnan">
   <meta name="color-scheme" content="dark light">
   <script>(function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)</script>
@@ -13,30 +13,28 @@
 
 <body>
   <div class="vi">
-    <h1 class="animate-slide-in-down">Vi</h1>
+    <h1 class="animate-slide-in-down">xu0w0xu</h1>
     <div class="quote">
       <span class="quote-line quote-line-start animate-slide-in-left"></span>
       <span class="quote-icon quote-icon-start animate-slide-in-down">
         <i class="icon icon-quotes-left"></i>
       </span>
-      <p class="quote-content animate-slide-in-down">不积跬步，无以至千里。不积小流，无以成江海。</p>
-      <p class="quote-author animate-slide-in-down">《劝学篇》—— <em>荀子</em></p>
+      <p class="quote-content animate-slide-in-down">“我深怕自己本非美玉故而不敢加以刻苦琢磨，却又半信自己是块美玉故又不肯庸庸碌碌，与瓦砾为伍”</p>
+      <p class="quote-author animate-slide-in-down">《山月记》—— <em>中岛敦</em></p>
       <span class="quote-icon quote-icon-end animate-slide-in-up">
         <i class="icon icon-quotes-right"></i>
       </span>
       <span class="quote-line quote-line-end animate-slide-in-right"></span>
     </div>
     <div class="links">
-      <a href="https://github.com/iissnan" class="animate-slide-in-down">GitHub</a>
-      <a href="https://notes.iissnan.com" class="animate-slide-in-down">Notes</a>
-      <a href="https://douban.com/people/iissnan" class="animate-slide-in-down">DouBan</a>
-      <a href="https://weibo.com/iissnan" class="animate-slide-in-down">WeiBo</a>
+      <a href="https://github.com/xu0w0xu" class="animate-slide-in-down">GitHub</a>
+      <a href="https://blog.x-xiuron.com" class="animate-slide-in-down">Blog</a>
     </div>
     <div class="location">
       <span class="location-icon animate-slide-in-up">
         <i class="icon icon-map-pin"></i>
       </span>
-      <span class="location-text animate-slide-in-down">XiaMen - China</span>
+      <span class="location-text animate-slide-in-down">Chengdu - China</span>
     </div>
     <div class="relocating">
       Navigating to: <span class="relocate-location"></span>...
