--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="vi">
+  <div class="xu0w0xu">
     <h1 class="animate-slide-in-down">xu0w0xu</h1>
     <div class="quote">
       <span class="quote-line quote-line-start animate-slide-in-left"></span>
@@ -38,6 +38,14 @@
     </div>
     <div class="relocating">
       Navigating to: <span class="relocate-location"></span>...
+    </div>
+    <!-- 备案信息 ICP for China -->
+    <div class="beian">
+      <span>
+        <a href="http://beian.miit.gov.cn/" target="_blank" rel="nofollow noopener">
+          蜀ICP备2022030886号
+        </a>
+      </span>
     </div>
   </div>
 
@@ -120,5 +128,6 @@
       }
     });
   </script>
+  
 </body>
 </html>
