--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>xu0w0xu</title>
   <meta name="Description" content="Home Page of xu0w0xu">
-  <meta name="color-scheme" content="light">
+  <meta name="color-scheme" content="dark light">
   <script>(function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)</script>
   <link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
 </head>
